--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "db:stop": "docker compose -f docker-compose.development.yml stop",
     "db:down": "docker compose -f docker-compose.development.yml down",
     "docker:build": "docker build -f .docker/Dockerfile -t op2022-web:latest .",
-    "docker:run": "docker run --name op2022-web-dev --env-file .env.local -p 3000:3000 --rm op2022-web:latest"
+    "docker:run": "docker run --name op2022-web-dev --env-file .env.local -p 3000:3000 --rm op2022-web:latest",
+    "test:cypress": "cypress open",
+    "test:jest": "jest --watch",
+    "test:jest-coverage": "jest --coverage"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
@@ -49,16 +52,21 @@
     "@storybook/react": "^6.5.13",
     "@storybook/react-vite": "^7.0.0-alpha.25",
     "@storybook/testing-library": "^0.0.14-next.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/cors": "^2.8.12",
     "@types/node": "18.11.5",
     "@types/react": "18.0.23",
     "@types/react-dom": "18.0.7",
     "@types/react-gtm-module": "^2.0.1",
     "autoprefixer": "^10.4.12",
+    "cypress": "^11.1.0",
     "dotenv-cli": "^6.0.0",
     "eslint": "8.26.0",
     "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
